# super-agent

./: .env-bk  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODING_STYLE_GUIDE.md  Makefile  README.md  Super-Agent 技术选型终审报告.md  claude_47_thinking_probe.py  cli.py  gemini_reasoning_probe.py  inspect_reasoning_nonstream.py  pyproject.toml  requirements.txt  run_deepagent.py  run_server.py  企业级混合智能体核心引擎架构设计  技术选型结论摘要.md  最终汇总报告.md  架构交付清单.md
.claude/: settings.local.json
plugin-platform/: .gitignore  README.md  RUNBOOK.md  pyproject.toml
plugin-platform/admin-console/: index.html  package-lock.json  package.json  vite.config.ts
plugin-platform/admin-console/src/: App.tsx  styles.css
plugin-platform/admin-console/src/api/: client.ts
plugin-platform/admin-console/src/components/: InstallStatePanel.tsx  PluginDetail.tsx  PluginList.tsx
plugin-platform/admin-console/src/types/: plugin.ts
plugin-platform/developer-tools/cli/: pluginctl.py
plugin-platform/developer-tools/sdk/plugin_developer/: __init__.py  packager.py  publisher.py  validator.py
plugin-platform/examples/plugins/research-assistant/: plugin.yaml
plugin-platform/examples/plugins/research-assistant/credentials/: patent-search-api-key.yaml
plugin-platform/scripts/: run-admin-console.sh  run-backend.sh
plugin-platform/services/plugin-core-service/plugin_core_service/: __init__.py  config.py
plugin-platform/services/plugin-management-service/plugin_management_service/: __init__.py
plugin-platform/services/plugin-runtime-service/plugin_runtime_service/: __init__.py  errors.py  openapi_adapter.py  skill_context.py  streamable_mcp_adapter.py
plugin-platform/tests/: conftest.py  test_api_flow.py  test_developer_lifecycle.py  test_registry_manager.py  test_runtime_adapters.py
(+681 files in other folders)
